--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,7 @@ services:
     environment:
       - TZ=Europe/Moscow
       - PYTHON_VERSION=3.12
-      # Добавь свои переменные окружения, например:
-      # - BOT_TOKEN=${BOT_TOKEN}
     volumes:
-      # Для разработки можно раскомментировать:
-      # - ./:/app
-      # Для сохранения логов
       - ./logs:/app/logs
-    # Если боту нужен доступ к интернету (обычно да)
+      - ./data:/app/data  # монтируем папку с базой данных
     network_mode: bridge
-    # Или создай сеть:
-    networks:
-      - bot-network
-
-networks:
-  bot-network:
-    driver: bridge
